Fixed horizontal scroll bug on mobile devices

--- a/src/app/components/shared/wheel/wheel.component.scss
+++ b/src/app/components/shared/wheel/wheel.component.scss
@@ -30,6 +30,7 @@
 
 .wheel-container {
   position: relative;
+  overflow: hidden;
 }
 
 .wheel-boundary {
